--- a/TimeSeries_hydrogeneration.ipynb
+++ b/TimeSeries_hydrogeneration.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "TimeSeries-hydrogeneration.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -22,8 +23,8 @@
       },
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = 'salmanzf'\n",
-        "os.environ['KAGGLE_KEY'] = 'b70e5ac15cf524bf414d5d0a2a9f5395'"
+        "os.environ['KAGGLE_USERNAME'] = #'user'\n",
+        "os.environ['KAGGLE_KEY'] = #'key'"
       ],
       "execution_count": 1,
       "outputs": []
